Added in a gtest tests.
Add in some gtest tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,12 +50,15 @@ message(STATUS "Using LLVMConfig.cmake found in: ${LLVM_DIR}")
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-# hlc code
-add_subdirectory(libhlc)
-
 # google test
 add_subdirectory(external/gtest_1.7.0)
 include_directories(${gtest_SOURCE_DIR}/include)
+
+# turn on testing
+enable_testing()
+
+# hlc code
+add_subdirectory(libhlc)
 
 message(
 "
